mng event banner , link , word wrapp fix

--- a/nut/static/css/management/basic_management.less
+++ b/nut/static/css/management/basic_management.less
@@ -56,6 +56,14 @@
   width: 150px;
 }
 
+.guoku-mng-table{
+  .link{
+    max-width: 250px;
+    word-wrap: break-word;
+  }
+}
+
+
 #test{
   color:red;
 }
